--- a/Assignments/Assig_1_2.ipynb
+++ b/Assignments/Assig_1_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "id": "2473fb03",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "id": "c9d9bb87",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 5,
    "id": "c9450eaa",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "(7787, 12)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 6,
    "id": "0356c942",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "2"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 7,
    "id": "c9c055d9",
    "metadata": {},
    "outputs": [
@@ -180,31 +180,121 @@
        "      <td>British TV Shows, Docuseries, Science &amp; Nature TV</td>\n",
        "      <td>This sequel to the award-winning nature series...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>s1002</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Blue Ruin</td>\n",
+       "      <td>Jeremy Saulnier</td>\n",
+       "      <td>Macon Blair, Devin Ratray, Amy Hargreaves, Kev...</td>\n",
+       "      <td>United States, France</td>\n",
+       "      <td>25-Feb-19</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>R</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Independent Movies, Thrillers</td>\n",
+       "      <td>Bad news from the past unhinges vagabond Dwigh...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>s1003</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Blue Streak</td>\n",
+       "      <td>Les Mayfield</td>\n",
+       "      <td>Martin Lawrence, Luke Wilson, Peter Greene, Da...</td>\n",
+       "      <td>Germany, United States</td>\n",
+       "      <td>01-Jan-21</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>94</td>\n",
+       "      <td>Action &amp; Adventure, Comedies</td>\n",
+       "      <td>A jewel thief returns to his hiding place afte...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>s1004</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Blue Valentine</td>\n",
+       "      <td>Derek Cianfrance</td>\n",
+       "      <td>Ryan Gosling, Michelle Williams, Faith Wladyka...</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>05-Jul-18</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>R</td>\n",
+       "      <td>112</td>\n",
+       "      <td>Dramas, Independent Movies, Romantic Movies</td>\n",
+       "      <td>As Cindy and Dean muddle through their languis...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>s1005</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>BluffMaster!</td>\n",
+       "      <td>Rohan Sippy</td>\n",
+       "      <td>Abhishek Bachchan, Priyanka Chopra, Riteish De...</td>\n",
+       "      <td>India</td>\n",
+       "      <td>08-Jan-21</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>TV-14</td>\n",
+       "      <td>129</td>\n",
+       "      <td>Comedies, International Movies, Romantic Movies</td>\n",
+       "      <td>When his girlfriend learns the truth about his...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>s1006</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Blurred Lines: Inside the Art World</td>\n",
+       "      <td>Barry Avrich</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>31-Dec-17</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>TV-MA</td>\n",
+       "      <td>85</td>\n",
+       "      <td>Documentaries</td>\n",
+       "      <td>Artists and industry insiders shed light on th...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  show_id     type                                      title        director   \n",
-       "0      s1  TV Show                                         3%             NaN  \\\n",
-       "1     s10    Movie                                       1920    Vikram Bhatt   \n",
-       "2    s100    Movie                                 3 Heroines  Iman Brotoseno   \n",
-       "3   s1000    Movie  Blue Mountain State: The Rise of Thadland    Lev L. Spiro   \n",
-       "4   s1001  TV Show                             Blue Planet II             NaN   \n",
+       "  show_id     type                                      title   \n",
+       "0      s1  TV Show                                         3%  \\\n",
+       "1     s10    Movie                                       1920   \n",
+       "2    s100    Movie                                 3 Heroines   \n",
+       "3   s1000    Movie  Blue Mountain State: The Rise of Thadland   \n",
+       "4   s1001  TV Show                             Blue Planet II   \n",
+       "5   s1002    Movie                                  Blue Ruin   \n",
+       "6   s1003    Movie                                Blue Streak   \n",
+       "7   s1004    Movie                             Blue Valentine   \n",
+       "8   s1005    Movie                               BluffMaster!   \n",
+       "9   s1006    Movie        Blurred Lines: Inside the Art World   \n",
        "\n",
-       "                                                cast         country   \n",
-       "0  João Miguel, Bianca Comparato, Michel Gomes, R...          Brazil  \\\n",
-       "1  Rajneesh Duggal, Adah Sharma, Indraneil Sengup...           India   \n",
-       "2  Reza Rahadian, Bunga Citra Lestari, Tara Basro...       Indonesia   \n",
-       "3  Alan Ritchson, Darin Brooks, James Cade, Rob R...   United States   \n",
-       "4                                 David Attenborough  United Kingdom   \n",
+       "           director                                               cast   \n",
+       "0               NaN  João Miguel, Bianca Comparato, Michel Gomes, R...  \\\n",
+       "1      Vikram Bhatt  Rajneesh Duggal, Adah Sharma, Indraneil Sengup...   \n",
+       "2    Iman Brotoseno  Reza Rahadian, Bunga Citra Lestari, Tara Basro...   \n",
+       "3      Lev L. Spiro  Alan Ritchson, Darin Brooks, James Cade, Rob R...   \n",
+       "4               NaN                                 David Attenborough   \n",
+       "5   Jeremy Saulnier  Macon Blair, Devin Ratray, Amy Hargreaves, Kev...   \n",
+       "6      Les Mayfield  Martin Lawrence, Luke Wilson, Peter Greene, Da...   \n",
+       "7  Derek Cianfrance  Ryan Gosling, Michelle Williams, Faith Wladyka...   \n",
+       "8       Rohan Sippy  Abhishek Bachchan, Priyanka Chopra, Riteish De...   \n",
+       "9      Barry Avrich                                                NaN   \n",
        "\n",
-       "  date_added  release_year rating  duration   \n",
-       "0  14-Aug-20          2020  TV-MA         4  \\\n",
-       "1  15-Dec-17          2008  TV-MA       143   \n",
-       "2  05-Jan-19          2016  TV-PG       124   \n",
-       "3  01-Mar-16          2016      R        90   \n",
-       "4  03-Dec-18          2017   TV-G         1   \n",
+       "                  country date_added  release_year rating  duration   \n",
+       "0                  Brazil  14-Aug-20          2020  TV-MA         4  \\\n",
+       "1                   India  15-Dec-17          2008  TV-MA       143   \n",
+       "2               Indonesia  05-Jan-19          2016  TV-PG       124   \n",
+       "3           United States  01-Mar-16          2016      R        90   \n",
+       "4          United Kingdom  03-Dec-18          2017   TV-G         1   \n",
+       "5   United States, France  25-Feb-19          2013      R        90   \n",
+       "6  Germany, United States  01-Jan-21          1999  PG-13        94   \n",
+       "7           United States  05-Jul-18          2010      R       112   \n",
+       "8                   India  08-Jan-21          2005  TV-14       129   \n",
+       "9                  Canada  31-Dec-17          2017  TV-MA        85   \n",
        "\n",
        "                                              genres   \n",
        "0  International TV Shows, TV Dramas, TV Sci-Fi &...  \\\n",
@@ -212,22 +302,32 @@
        "2        Dramas, International Movies, Sports Movies   \n",
        "3                                           Comedies   \n",
        "4  British TV Shows, Docuseries, Science & Nature TV   \n",
+       "5                      Independent Movies, Thrillers   \n",
+       "6                       Action & Adventure, Comedies   \n",
+       "7        Dramas, Independent Movies, Romantic Movies   \n",
+       "8    Comedies, International Movies, Romantic Movies   \n",
+       "9                                      Documentaries   \n",
        "\n",
        "                                         description  \n",
        "0  In a future where the elite inhabit an island ...  \n",
        "1  An architect and his wife move into a castle t...  \n",
        "2  Three Indonesian women break records by becomi...  \n",
        "3  New NFL star Thad buys his old teammates' belo...  \n",
-       "4  This sequel to the award-winning nature series...  "
+       "4  This sequel to the award-winning nature series...  \n",
+       "5  Bad news from the past unhinges vagabond Dwigh...  \n",
+       "6  A jewel thief returns to his hiding place afte...  \n",
+       "7  As Cindy and Dean muddle through their languis...  \n",
+       "8  When his girlfriend learns the truth about his...  \n",
+       "9  Artists and industry insiders shed light on th...  "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
@@ -532,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 9,
    "id": "8407b8a7",
    "metadata": {},
    "outputs": [
@@ -554,7 +654,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 11,
    "id": "8feb0ecc",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1247,7 @@
        "[4808 rows x 12 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
